// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basics Multi root component 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span>1</span>\`);
  }
  class Block2 extends ContentBlock {
    static el = elem(\`<span>2</span>\`);
  }
  
  return ctx => {
    const b1 = new MultiBlock(3);
    const b2 = b1.children[0] = new Block1();
    b1.children[1] = new TextBlock(\`text\`)
    const b3 = b1.children[2] = new Block2();
    return b1;
  }
}"
`;

exports[`basics can mount a simple class component 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner} = utils;
  
  
  return ctx => {
    const b1 = new TextBlock(\`__template__1\`)
    return b1;
  }
}"
`;

exports[`basics can mount a simple class component 2`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span>simple vnode</span>\`);
  }
  
  return ctx => {
    const b1 = new Block1();
    return b1;
  }
}"
`;

exports[`basics class component with dynamic text 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span>My value: <owl-text/></span>\`);
    data = new Array(1);
    update() {
      this.el.firstChild.nextSibling.textContent = toString(this.data[0]);
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.data[0] = ctx['value'];
    return b1;
  }
}"
`;

exports[`basics functional component: setup return value is context 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner} = utils;
  
  class Block1 extends ContentBlock {
    static el = elem(\`<span>My value: <owl-text/></span>\`);
    data = new Array(1);
    update() {
      this.el.firstChild.nextSibling.textContent = toString(this.data[0]);
    }
  }
  
  return ctx => {
    const b1 = new Block1();
    b1.data[0] = ctx['value'];
    return b1;
  }
}"
`;

exports[`basics simple functional component with text node 1`] = `
"function anonymous(Blocks, utils
) {
  let {MultiBlock, TextBlock, ContentBlock, CollectionBlock, HTMLBlock} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner} = utils;
  
  
  return ctx => {
    const b1 = new TextBlock(\`look, just text!\`)
    return b1;
  }
}"
`;
